# cargo-semver

./: Cargo.toml  README.md
.github/workflows/: build-test.yml  publish.yaml
src/: config.rs  main.rs  version.rs
tests/: integration.rs
