[package]
authors = ["Filip Stefansson <filip.stefansson@gmail.com>"]
name = "cargo-semver"
version = "1.1.2"
license = "MIT"
description = "Cargo subcommand to update the version in your Cargo.toml file - SemVer style."
readme = "README.md"
repository = "https://github.com/filipstefansson/cargo-semver"
keywords = ["cli", "version", "semver", "toml", "crate", "crates", "cargo"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
exclude = [".github"]
edition = "2018"

[dependencies]
seahorse = "1.1"
semver = "0.11.0"
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "1.0.2"
predicates = "1.0.6"
