[package]
authors = ["Filip Stefansson <filip.stefansson@gmail.com>"]
name = "cargo-semver"
version = "1.0.0-alpha.3"
license = "MIT"
description = "Cargo subcommand to update the version in your Cargo.toml file - SemVer style."
readme = "README.md"
repository = "https://github.com/filipstefansson/cargo-semver"
keywords = ["version", "semver", "toml", "crate", "cargo"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
exclude = [".github"]
edition = "2018"

[dependencies]
clap = "2.33.3"
semver = "0.11.0"
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "1.0.2"
predicates = "1.0.6"
